added defenders and opponent mechanics

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="chars"></div>
         </div>
         <div class="row" id="enemySelect">
-            <h3>Select Your Foe</h3>
+            <div id="foes"></div>
 
         </div>
         <div class="row" id="options">
@@ -28,7 +28,7 @@
                 <button class="btn btn-danger" type="button">Attack</button>
             </div>
         </div>
-        <div class="row" id="foe">
+        <div class="row" id="defend">
 
         </div>
     </div>
