--- a/index.html
+++ b/index.html
@@ -7,29 +7,56 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Mega RPG</title>
+<title>Beedle Bros.</title>
 </head>
 <body>
     <h2></h2>
     <!-- main body grid -->
     <div class="container">
-        <div class="row" id="charSelect">
-            <h3>Select Your Character!</h3>
-            <div id="chars"></div>
-        </div>
-        <div class="row" id="enemySelect">
-            <div id="foes"></div>
-
-        </div>
-        <div class="row" id="options">
-            <h3>Pick An Action!</h3>
-            <!-- added as group in order to add options later -->
-            <div class="btn-group">
-                <button class="btn btn-danger" type="button">Attack</button>
+        <div class="row">
+            <div class="col-12" id="charSelect">
+                <h3>Select Your Beetle!</h3>
+                <div id="chars"></div>
             </div>
         </div>
-        <div class="row" id="defend">
+        <div class="row">
+            <div class="col-12" id="enemySelect">
+                <div id="foes"></div>
+            </div>
+        </div>
+        <div class="row" id="options">
+            <div class="col-12">
+                <h3>Pick An Action!</h3>
+                <!-- added as group in order to add options later -->
+                <div class="btn-group">
+                    <button class="btn btn-danger" id="attack" type="button">Attack</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12" id="defend">
+            </div>
+        </div>
 
+          <!-- displays on win/loss -->
+        <div class="modal fade" id="winModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="winModalCenterTitle">You Win!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    <iframe id="giffy" width="480" height="211" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Play Again</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            </div>
         </div>
     </div>
 
